--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,31 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
 
 
   color: rgba(0, 0, 0, 0.87);
-
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
+.navbar{
+  background-color: black;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
+
+.home-link {
+  color:white;
+  margin: 0 15px;
+
+}
+
+.add-artwork-link {
+ color: white;
+ margin: 0 15px;
+}
+
 
 a {
   font-weight: 500;
@@ -23,11 +37,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh
+  font-family: "Playfair Display", serif;
+  margin: 0%;
+ 
+  
 }
+
 
 h1 {
   font-size: 3.2em;
