--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   overflow: hidden;
@@ -129,6 +129,49 @@ body {
   color: #777777;
   font-size: 1em;
   margin: 4px 0;
+  font-weight: bold;
+}
+.artwork-card p.price{
+  font-weight: bold;
+  color: #333333;
+  margin-top: 12px;
+}
+.artwork-card a {
+  color: rgba(193,155,129,255);
+  text-decoration: none;
+  font-size: 15px;
+  margin-top: 16px;
+  transition: color 0.3s;
+  font-weight: bold;
+}
+.artwork-card a:hover {
+  color: #0b5bb5;
+}
+
+.artwork-card button {
+  background-color: #87561e;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 1em;
+  margin-top: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.artwork-card a:hover {
+  color: #0b5bb5;
+}
+
+.artwork-card button {
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 1em;
+  margin-top: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 h1 {
@@ -143,7 +186,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #6b6767;
   cursor: pointer;
   transition: border-color 0.25s;
 }
