--- a/src/index.css
+++ b/src/index.css
@@ -87,11 +87,13 @@ body {
   
 }
 .artwork-container{
-  display: grid;
-  flex-wrap: wrap;
-  grid-template-columns:repeat(3, 1fr);
+  flex: 1 1 300px;
+  display: flex;
+ flex-wrap: wrap;
   gap: 16px;
+  justify-content: center;
   padding: 16px;
+  
 }
 
 .artwork-card{
