--- a/src/index.css
+++ b/src/index.css
@@ -149,8 +149,7 @@ body {
 .artwork-card a:hover {
   color: #0b5bb5;
 }
-
-.artwork-card button {
+artwork-card button {
   background-color: #87561e;
   color: #ffffff;
   border: none;
@@ -161,9 +160,50 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
-.artwork-card a:hover {
-  color: #0b5bb5;
+
+.form-detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 24px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.form-detail input {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1em;
+  color: #333;
+  box-sizing: border-box;
+  transition: border-color 0.3s;
+}
+.form-detail button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 16px;
+  font-size: 1em;
+  color: #ffffff;
+  background-color:  #87561e;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+
+.form-detail input:focus {
+  outline: none;
+  border-color:  #87561e;
+  box-shadow: 0 0 5px rgba(26, 115, 232, 0.2);
+}
+
+
 
 .artwork-card button {
   color: #ffffff;
